samples/_failures_safe/1761202985_b31264_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8c0fb64.c: In function ‘main’:
./samples/SAFE/__tmp_b8c0fb64.c:135:56: error: expected ‘)’ at end of input
  135 |                    timeinfo->tm_mday, timeinfo->tm_hour
      |                                                        ^
      |                                                        )
./samples/SAFE/__tmp_b8c0fb64.c:133:19: note: to match this ‘(’
  133 |             printf("[%04d-%02d-%02d %02d:%02d:%02d] %s: %s\n",
      |                   ^
./samples/SAFE/__tmp_b8c0fb64.c:135:20: error: expected declaration or statement at end of input
  135 |                    timeinfo->tm_mday, timeinfo->tm_hour
      |                    ^~~~~~~~
./samples/SAFE/__tmp_b8c0fb64.c:135:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b8c0fb64.c:135:20: error: expected declaration or statement at end of input
